Fix desktop filter issue on safari

--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -48,7 +48,12 @@ body {
       position: fixed;
       overflow: hidden;
     }
+
+    @include susy-breakpoint($bp-medium, $susy) {
+      &.mobile-no-scroll {
+        position: relative;
+        overflow: auto;
+      }
+    }
   }
-
-
 }
